Personal configuration of the machine.